recursion.lessons.recursion.tree.Tree.scala.error
Tree:18: error: not found: value longeur
		longueur = longeur * shrink
                           ^